src/objects/Notice__c.object
<CustomObject>
    <fields>
        <fullName>Announcement_Type__c</fullName>
        <defaultValue>&quot;Initial Announcement or Amended Announcement&quot;</defaultValue>
        <label>Announcement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Deadline__c</fullName>
        <defaultValue>&quot;Applications are due [MM DD, YYYY] at 5:00 p.m. Eastern Time.&quot;</defaultValue>
        <label>Application Deadline</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applications_are_due_by__c</fullName>
        <label>Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review-In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFDA number</label>
        <referenceTo>CFDA_Number__c</referenceTo>
        <relationshipLabel>Notices</relationshipLabel>
        <relationshipName>Notices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Corparate_Progran_Code__c</fullName>
        <formula>CNCS_Corporate_Program__r.Code_CNCS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Corparate Progran Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Corporate Program</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>Notices</relationshipLabel>
        <relationshipName>Notices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concept_Form_Deadline_1__c</fullName>
        <formula>IF( Concept_Paper_Deadline__c = true,&quot;If Required: Applicants are required to submit a Concept Form in order to be eligible for this competition.&quot;  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concept Form Deadline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Deadline1__c</fullName>
        <defaultValue>&quot;Applicants are required to submit a Concept Paper in order to be eligible for this competition. The Concept Paper is due [MM DD, YYYY] at 5:00 p.m. Eastern Time.&quot;</defaultValue>
        <label>Concept Paper Deadline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Deadline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concept Paper Deadline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Papers_are_due_by__c</fullName>
        <label>Concept Papers are due by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclosure__c</fullName>
        <defaultValue>&quot;Publication of this Notice of Federal Funding Opportunity or Availability (Notice) does not obligate the Corporation for National and Community Service (CNCS) to award any specific number of [grants] or [cooperative agreements] or to obligate any particular amount of funding.&quot;</defaultValue>
        <label>Disclosure</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Federal_Agency_Name__c</fullName>
        <defaultValue>&quot;Corporation for National and Community Service&quot;</defaultValue>
        <label>Federal Agency Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity_Title__c</fullName>
        <defaultValue>&quot;Fiscal Year, Competition Name&quot;</defaultValue>
        <label>Funding Opportunity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer_2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Layer 2 Name</label>
        <referenceTo>Layer_2__c</referenceTo>
        <relationshipLabel>Notice</relationshipLabel>
        <relationshipName>Notice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <defaultValue>&quot;The mission of the Corporation for National and Community Service (CNCS) is to improve lives, strengthen communities, and foster civic engagement through service and volunteering. Through its AmeriCorps, Senior Corps, Social Innovation Fund, and other programs and activities, CNCS has helped to engage millions of citizens in meeting community and national challenges through service and volunteer action.&quot;</defaultValue>
        <label>Mission</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notice_Type__c</fullName>
        <label>Notice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Notice of Federal Funding Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice of Federal Funding Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Proposal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notice_of_Intent_Deadline_1__c</fullName>
        <formula>IF( Notification_of_Intent_Deadline__c = true,&quot;If Required: Applicants are required to submit a Notice of Intent to Apply in order to be eligible for this competition.&quot;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notice of Intent Deadline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notices_of_Intent_to_Apply_are_due_by__c</fullName>
        <label>Notices of Intent to Apply are due by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_of_Intent_Deadline1__c</fullName>
        <defaultValue>&quot;If Required: Applicants are required to submit a Notice of Intent to Apply in order to be eligible for this competition. The Notice of Intent to Apply is due [MM DD, YYYY] at 5:00 p.m. Eastern Time. If Optional: A Notice of Intent to Apply is due by [MM DD, YYYY] at 5:00 p.m. Eastern Time.&quot;</defaultValue>
        <label>Notification of Intent Deadline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_of_Intent_Deadline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification of Intent Deadline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning</label>
        <referenceTo>Planning__c</referenceTo>
        <relationshipLabel>Notice</relationshipLabel>
        <relationshipName>Notice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review-In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Successful_applicants_will_be_notified_b__c</fullName>
        <label>Successful applicant will be notified by</label>
        <type>Date</type>
    </fields>
    <label>Notice</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Notice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Applications_are_due_by</fullName>
        <active>true</active>
        <errorConditionFormula>Applications_are_due_by__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Applications_are_due_by__c</errorDisplayField>
        <errorMessage>Select Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_Forms_are_due_by</fullName>
        <active>true</active>
        <errorConditionFormula>Concept_Papers_are_due_by__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Concept_Papers_are_due_by__c</errorDisplayField>
        <errorMessage>Select Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notice_of_Intent_Deadline</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Notification_of_Intent_Deadline__c , ISBLANK( Notices_of_Intent_to_Apply_are_due_by__c ) )</errorConditionFormula>
        <errorDisplayField>Notices_of_Intent_to_Apply_are_due_by__c</errorDisplayField>
        <errorMessage>Please entry the date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notice_of_intent_to_apply</fullName>
        <active>true</active>
        <errorConditionFormula>Notices_of_Intent_to_Apply_are_due_by__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Notices_of_Intent_to_Apply_are_due_by__c</errorDisplayField>
        <errorMessage>Select Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notices_of_Intent_to_Apply_are_due_by</fullName>
        <active>true</active>
        <errorConditionFormula>Notices_of_Intent_to_Apply_are_due_by__c  &gt;  Applications_are_due_by__c</errorConditionFormula>
        <errorDisplayField>Notices_of_Intent_to_Apply_are_due_by__c</errorDisplayField>
        <errorMessage>This should be before the application due date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Successful_applicant_will_be_notified_by</fullName>
        <active>true</active>
        <errorConditionFormula>Successful_applicants_will_be_notified_b__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Successful_applicants_will_be_notified_b__c</errorDisplayField>
        <errorMessage>Select Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>concept_checkbox</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Concept_Paper_Deadline__c , ISBLANK( Concept_Papers_are_due_by__c ) )</errorConditionFormula>
        <errorDisplayField>Concept_Papers_are_due_by__c</errorDisplayField>
        <errorMessage>Please entry the date.</errorMessage>
    </validationRules>
</CustomObject>